--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="sky">#87ceeb</color>
+    <color name="com_facebook_blue">#1877F2</color>
+<!--    <color name="white2">#FFFFFFFF</color>-->
 </resources>
