--- a/app/src/main/res/layout/activity_socket.xml
+++ b/app/src/main/res/layout/activity_socket.xml
@@ -6,4 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".new1.websocket.SocketActivity">
 
+    <Button
+        android:id="@+id/startsk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="startSocket"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/closesk"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="closeSocket"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/et1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Name"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/sendbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="send"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+       />
+
+    <TextView
+        android:id="@+id/mymsg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="msges"
+        app:layout_constraintBottom_toTopOf="@+id/et1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/startsk" />
 </androidx.constraintlayout.widget.ConstraintLayout>
